# agent-island

./: .gitignore  Makefile  README.md
.beads/: issues.jsonl
ClaudeIsland/: Info.plist
ClaudeIsland.xcodeproj/: project.pbxproj
ClaudeIsland.xcodeproj/xcshareddata/xcschemes/: ClaudeIsland.xcscheme
ClaudeIsland/App/: AppDelegate.swift  WindowManager.swift
ClaudeIsland/Core/: NotchViewModel.swift
ClaudeIsland/Resources/: AgentIsland-AppStore.entitlements  agent-island-state.py
ClaudeIsland/Resources/UsageScripts/: check-usage.js  package.json
ClaudeIsland/Services/Hooks/: HookInstaller.swift  HookSocketServer.swift
ClaudeIsland/Services/Shared/: Analytics.swift
ClaudeIsland/Services/State/: SessionStore.swift
ClaudeIsland/Services/Update/: NotchUserDriver.swift
ClaudeIsland/UI/Views/: NotchView.swift  (+3 more)
cauth/: Cargo.toml  Package.swift  README.md  RUST_MIGRATION.md
cauth/Sources/: main.swift
cauth/Tests/: CAuthTests.swift
cauth/src/: main.rs
docs/: appstore-upload-materials-draft.md  deploy-macos-store.md  oauth-background-breakage-2026-02-12.md  oauth-resilience.spec.md  usage-check-docker-vs-local-2026-02-10.md  usage-profiles.spec.md
docs/plans/: 2026-02-05-usage-profiles.md
scripts/: AccountStoreTests.swift  ClaudeCodeTokenStoreTests.swift  CredentialExporterTests.swift  ProfileSwitcherTests.swift  UsageAccountIdentityMatcherTests.swift  UsageFetcherTests.swift  UsageIdentityStoreTests.swift  UsageModelsTests.swift  build-appstore.sh  build.sh  bump-marketing-version.sh  create-release.sh  ensure-tools.sh  install-cauth.sh  make-up.sh
(+11 files in other folders)
