[package]
name = "cauth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock"] }
fs2 = "0.4.3"
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
